Upgraded to htsjdk 2.19.0

--- a/public/gatk-utils/pom.xml
+++ b/public/gatk-utils/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>htsjdk</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>27.1-jre</version>
+        </dependency>
+        <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
         </dependency>
